--- a/Chrome Source/onboarding.html
+++ b/Chrome Source/onboarding.html
@@ -32,13 +32,14 @@
     <h1>Welcome to Telsia!</h1>
     <img src="/images/icon128.png" alt="Telsia Icon" />
     <p>
-      Telsia helps reduce eye strain and related issues with a custom colour
-      overlay.
+      Telsia alleviates digital eye strain and related symptoms by applying a
+      customizable colour overlay.
     </p>
     <p>
-      To get started, pin the Telsia icon to your browser toolbar, and then
-      click Telsia to open the settings.
+      To begin, pin the Telsia icon to your browser toolbar and select it to
+      open the settings panel.
     </p>
     <video src="images/onboarding.mp4" autoplay loop muted></video>
+    <script src="content.js"></script>
   </body>
 </html>
