--- a/Source/popup.html
+++ b/Source/popup.html
@@ -93,6 +93,7 @@
       }
       input[type="color"] {
         -webkit-appearance: none;
+        appearance: none;
         border: 1px solid #ccc;
         border-radius: 4px;
         width: 44px;
@@ -205,6 +206,6 @@
     <div id="presets-container"></div>
 
     <script src="lib/coloris/coloris.min.js"></script>
-    <script src="popup.clean.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
