--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -43,9 +43,22 @@
         step="0.01"
       />
     </div>
+    <div class="container">
+      <label for="blend-mode">Blend Mode</label>
+      <select id="blend-mode">
+        <option value="normal">Normal</option>
+        <option value="multiply">Multiply</option>
+        <option value="screen">Screen</option>
+        <option value="overlay">Overlay</option>
+        <option value="darken">Darken</option>
+        <option value="lighten">Lighten</option>
+        <option value="soft-light">Soft Light</option>
+      </select>
+    </div>
 
     <hr />
     <span class="subtitle">Presets</span>
+    <br />
     <div id="presets-container"></div>
   </body>
 </html>
