--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -45,7 +45,17 @@
     </div>
     <div class="container">
       <label for="blend-mode">Blend Mode</label>
-      <select id="blend-mode">
+      <select
+        id="blend-mode"
+        style="
+          font-family:
+            Lexend,
+            system-ui,
+            -apple-system,
+            sans-serif;
+        "
+        ;
+      >
         <option value="normal">Normal</option>
         <option value="multiply">Multiply</option>
         <option value="screen">Screen</option>
