--- a/entrypoints/onboarding/index.html
+++ b/entrypoints/onboarding/index.html
@@ -34,8 +34,8 @@
         font-family: "Lexend";
         margin: 20px;
         text-align: center;
-        background-color: #eae8de;
-        color: rgb(85, 76, 85);
+        background-color: #f5f5f4;
+        color: #44403b;
       }
       h1 {
         font-size: 48px;
@@ -65,8 +65,8 @@
       }
       @media (prefers-color-scheme: dark) {
         body {
-          background-color: #202124;
-          color: #e8eaed;
+          background-color: #1c1917;
+          color: #e7e5e4;
         }
       }
       .header-container {
